# mlzfetch

./: LICENSE  README.md  install.sh  logic.py  main.py  pyproject.toml
logos/: arch.txt  fedora.txt  pop!_os.txt
src/: colors.py  main.py
