[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mlzfetch"
version = "1.0.1"
description = "A minimal fetch tool"
readme = "README.md"
authors = [{name = "tafabey", email = "211373705+tafabey@users.noreply.github.com"}]
requires-python = ">=3.6"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main", "colors"]
packages = ["platforms"]

[project.scripts]
mlzfetch = "main:main"
